Find: Update working range when replacing

BUG: 447972